# skill-router

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ASSUMPTIONS.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  PRODUCTION_SETUP.md  README.md  SECURITY.md  SESSION_LOG_2026_07_14.md  SESSION_LOG_2026_07_15.md  SESSION_LOG_2026_07_17.md  SESSION_LOG_2026_07_22.md  SESSION_LOG_2026_07_23.md  docker-compose.external-langfuse.yml  docker-compose.yml  pyproject.toml  requirements-guard.txt  requirements.txt  skills.lock.json
agent/: run.py  traces.py
analysis/: ingot-carn_dossiers.jsonl  ingot-carn_index.jsonl
docs/: carn-panels.md  configuration.md  evidence-gate.md  how-it-works.md  ingot-carn_ATLAS.md  mcp-integration.md  security.md  skill-sources.md  sso.md  tutorial.md
evals/: routing.yaml
experiments/: skill_decomposer_matcher.py
mcp_server/: cli.py  embedding.py  guard_model.py  registry.py  router.py  routing_eval.py  safety.py  server.py  usage_counts.py
optimize/: __init__.py  ab.py  acceptance.py  bestofn.py  canary.py  compat.py  draft.py  evidence.py  execcheck.py  gepa_loop.py  judge.py  loop.py  mine.py  promote.py  rollout.py  routing.py  routing_health.py  sandbox_driver.py  skillopt_bridge.py  skillopt_loop.py  usage.py
scripts/: claude_langfuse_smoke.sh  claude_setup.sh  codex_langfuse_smoke.sh  codex_setup.sh  compose_smoke.sh  fetch_skills.sh
tests/: conftest.py  test_acceptance.py  test_adapters.py  test_auth.py  test_bestofn.py  test_canary_visibility.py  test_cli.py  test_compat.py  test_draft.py  test_judge.py  (+29 more)
(+51 files in other folders)
