[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-router"
version = "0.2.0"
description = "Route to the right Agent Skill, learn from failures, and improve it safely"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "fastmcp>=3",
  "fastembed>=0.4.0",
  "numpy>=1.26",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
optimizer = [
  "deepagents>=0.6,<0.7",
  "gepa==0.1.1",
  "langchain-mcp-adapters>=0.1.0",
  "langchain-openai>=0.2.10",
  "langfuse>=4.14,<5",
  "litellm>=1.60",
]
ui = ["fastapi>=0.115", "uvicorn>=0.30"]
guard = ["transformers>=4.48", "torch>=2.5"]
dev = ["pytest>=8.0", "build>=1.2", "twine>=5.1"]

[project.scripts]
skill-router = "mcp_server.cli:main"

[tool.setuptools.packages.find]
include = ["mcp_server*", "agent*", "optimize*", "ui*"]

[tool.setuptools.package-data]
optimize = ["tasks/*.yaml"]
ui = ["static/*"]
